syntax = "proto3";

package com.z.model.proto;
import "User.proto";
import "Game.proto";
message MyMessage {
  int32 id = 1; //消息号
  oneof type {
    UserMsg userMsg = 2; // 用户 User
    GameMsg gameMsg =3; //  玩法 game
  }
}

